--- a/CI/azure-pipelines.yml
+++ b/CI/azure-pipelines.yml
@@ -25,26 +25,13 @@ jobs:
 
     steps:
     - task: UseDotNet@2
-      displayName: 'Install .NET Core 3.1'
-      inputs:
-        packageType: 'sdk'
-        version: '3.1.x'
-
-    - task: UseDotNet@2
       displayName: 'Install .NET 5'
       inputs:
         packageType: 'sdk'
         version: '5.0.x'
         includePreviewVersions: true
 
-    - script: echo '##vso[task.setvariable variable=nupkgVersion]$(defaultPackageVersion)
-      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-
-    - script: echo '##vso[task.setvariable variable=nupkgVersion]$(defaultPackageVersion)-preview$(Build.BuildNumber)
-      condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
-
     - script: dotnet tool install --global dotnet-reportgenerator-globaltool
-    - script: dotnet tool install --global Codecov.Tool
 
     - task: DotNetCoreCLI@2
       displayName: 'dotnet restore'
@@ -80,11 +67,10 @@ jobs:
         pathToSources: '$(Build.SourcesDirectory)/coverage/'
         failIfCoverageEmpty: true
 
-    - task: CmdLine@2
+    - bash: bash <(curl -s https://codecov.io/bash) -Z -f "./coverage/coverage.cobertura.xml"
       displayName: 'Publish to Codecov'
-      inputs:
-        script: codecov -f "$(Build.SourcesDirectory)/coverage/coverage.cobertura.xml" -t $(CODECOV_TOKEN)'
-        failOnStderr: true
+      env:
+        CODECOV_TOKEN: $(CODECOV_TOKEN)
 
     - task: DotNetCoreCLI@2
       displayName: 'dotnet restore'
@@ -106,8 +92,6 @@ jobs:
         outputDir: 'nupkgs'
         nobuild: true
         includesymbols: true
-        versioningScheme: 'byEnvVar'
-        versionEnvVar: 'nupkgVersion'
 
     - task: PublishPipelineArtifact@1
       inputs:
