--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>9.0</LangVersion>
     <RootNamespace>xFunc.Maths</RootNamespace>
     <PackageId>xFunc.Maths</PackageId>
     <Version>4.0.0</Version>
