--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <AssemblyVersion>4.0.0</AssemblyVersion>
     <FileVersion>4.0.0</FileVersion>
@@ -14,41 +14,41 @@
     <ApplicationIcon>Images\xFunc.ico</ApplicationIcon>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Images\Add.png" />
-    <None Remove="Images\Clear.png" />
-    <None Remove="Images\ClearLarge.png" />
-    <None Remove="Images\Converter.png" />
-    <None Remove="Images\ConverterLarge.png" />
-    <None Remove="Images\Copy.png" />
-    <None Remove="Images\CopyLarge.png" />
-    <None Remove="Images\Copy_16.png" />
-    <None Remove="Images\Cut.png" />
-    <None Remove="Images\CutLarge.png" />
-    <None Remove="Images\Delete.png" />
-    <None Remove="Images\DeleteLarge.png" />
-    <None Remove="Images\Edit.png" />
-    <None Remove="Images\Function.png" />
-    <None Remove="Images\FunctionLarge.png" />
-    <None Remove="Images\Help.png" />
-    <None Remove="Images\Paste.png" />
-    <None Remove="Images\PasteLarge.png" />
-    <None Remove="Images\Redo.png" />
-    <None Remove="Images\RedoLarge.png" />
-    <None Remove="Images\Refresh.png" />
-    <None Remove="Images\Remove.png" />
-    <None Remove="Images\Tools.png" />
-    <None Remove="Images\Undo.png" />
-    <None Remove="Images\UndoLarge.png" />
-    <None Remove="Images\Variable.png" />
-    <None Remove="Images\VariableLarge.png" />
-    <None Remove="Images\Vars.png" />
-    <None Remove="Images\VarsLarge.png" />
-    <None Remove="Images\xFunc.ico" />
-  </ItemGroup>
+	<ItemGroup>
+		<Resource Include="Images\Add.png" />
+		<Resource Include="Images\Clear.png" />
+		<Resource Include="Images\ClearLarge.png" />
+		<Resource Include="Images\Converter.png" />
+		<Resource Include="Images\ConverterLarge.png" />
+		<Resource Include="Images\Copy.png" />
+		<Resource Include="Images\CopyLarge.png" />
+		<Resource Include="Images\Copy_16.png" />
+		<Resource Include="Images\Cut.png" />
+		<Resource Include="Images\CutLarge.png" />
+		<Resource Include="Images\Delete.png" />
+		<Resource Include="Images\DeleteLarge.png" />
+		<Resource Include="Images\Edit.png" />
+		<Resource Include="Images\Function.png" />
+		<Resource Include="Images\FunctionLarge.png" />
+		<Resource Include="Images\Help.png" />
+		<Resource Include="Images\Paste.png" />
+		<Resource Include="Images\PasteLarge.png" />
+		<Resource Include="Images\Redo.png" />
+		<Resource Include="Images\RedoLarge.png" />
+		<Resource Include="Images\Refresh.png" />
+		<Resource Include="Images\Remove.png" />
+		<Resource Include="Images\Tools.png" />
+		<Resource Include="Images\Undo.png" />
+		<Resource Include="Images\UndoLarge.png" />
+		<Resource Include="Images\Variable.png" />
+		<Resource Include="Images\VariableLarge.png" />
+		<Resource Include="Images\Vars.png" />
+		<Resource Include="Images\VarsLarge.png" />
+		<Resource Include="Images\xFunc.ico" />
+	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fluent.Ribbon" Version="7.0.1" />
+    <PackageReference Include="Fluent.Ribbon" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -103,39 +103,6 @@
     <None Include="NOTICE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Images\Add.png" />
-    <Resource Include="Images\Clear.png" />
-    <Resource Include="Images\ClearLarge.png" />
-    <Resource Include="Images\Converter.png" />
-    <Resource Include="Images\ConverterLarge.png" />
-    <Resource Include="Images\Copy.png" />
-    <Resource Include="Images\CopyLarge.png" />
-    <Resource Include="Images\Copy_16.png" />
-    <Resource Include="Images\Cut.png" />
-    <Resource Include="Images\CutLarge.png" />
-    <Resource Include="Images\Delete.png" />
-    <Resource Include="Images\DeleteLarge.png" />
-    <Resource Include="Images\Edit.png" />
-    <Resource Include="Images\Function.png" />
-    <Resource Include="Images\FunctionLarge.png" />
-    <Resource Include="Images\Help.png" />
-    <Resource Include="Images\Paste.png" />
-    <Resource Include="Images\PasteLarge.png" />
-    <Resource Include="Images\Redo.png" />
-    <Resource Include="Images\RedoLarge.png" />
-    <Resource Include="Images\Refresh.png" />
-    <Resource Include="Images\Remove.png" />
-    <Resource Include="Images\Tools.png" />
-    <Resource Include="Images\Undo.png" />
-    <Resource Include="Images\UndoLarge.png" />
-    <Resource Include="Images\Variable.png" />
-    <Resource Include="Images\VariableLarge.png" />
-    <Resource Include="Images\Vars.png" />
-    <Resource Include="Images\VarsLarge.png" />
-    <Resource Include="Images\xFunc.ico" />
   </ItemGroup>
 
 </Project>
