--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -33,6 +33,7 @@
     <Using Include="xFunc.Maths.Expressions.Units" />
     <Using Include="xFunc.Maths.Expressions.Units.AngleUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.Converters" />
+    <Using Include="xFunc.Maths.Expressions.Units.MassUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.PowerUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.TemperatureUnits" />
     <Using Include="xFunc.Maths.Resources" />
