--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -59,6 +59,7 @@ https://github.com/sys27/xFunc/wiki/Breaking-Changes</PackageReleaseNotes>
     <Using Include="xFunc.Maths.Expressions.Units.MassUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.PowerUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.TemperatureUnits" />
+    <Using Include="xFunc.Maths.Expressions.Units.TimeUnits" />
     <Using Include="xFunc.Maths.Resources" />
     <Using Include="xFunc.Maths.Results" />
     <Using Include="xFunc.Maths.Tokenization" />
