--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -37,6 +37,7 @@
     <Using Include="xFunc.Maths.Expressions.Units.MassUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.PowerUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.TemperatureUnits" />
+    <Using Include="xFunc.Maths.Expressions.Units.TimeUnits" />
     <Using Include="xFunc.Maths.Resources" />
     <Using Include="xFunc.Maths.Results" />
     <Using Include="xFunc.Maths.Tokenization" />
