--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -32,6 +32,7 @@
     <Using Include="xFunc.Maths.Expressions.Trigonometric" />
     <Using Include="xFunc.Maths.Expressions.Units" />
     <Using Include="xFunc.Maths.Expressions.Units.AngleUnits" />
+    <Using Include="xFunc.Maths.Expressions.Units.AreaUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.Converters" />
     <Using Include="xFunc.Maths.Expressions.Units.LengthUnits" />
     <Using Include="xFunc.Maths.Expressions.Units.MassUnits" />
